--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/google-fonts": "^3.0.2",
     "autoprefixer": "^10.4.16",
     "nuxt": "^3.8.2",
+    "nuxt-headlessui": "^1.1.4",
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
