--- a/client/package.json
+++ b/client/package.json
@@ -26,8 +26,10 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.5",
+    "@pinia/nuxt": "^0.5.1",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
-    "nuxt-swiper": "^1.2.2"
+    "nuxt-swiper": "^1.2.2",
+    "pinia": "^2.1.7"
   }
 }
